--- a/css/nav-bar.css
+++ b/css/nav-bar.css
@@ -1,27 +1,26 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-*{
-    padding: 0;
-    margin: 0;
-}
+
 
 /* Estilos generales de la barra de navegación */
 #nav-bar {
+    top:0;
     width: 100%;
     height: 70px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-color: #1E1E1E;
-    color: white;
+    background-color: #fff;
     font-family: 'Poppins', sans-serif;
     font-size: 2vh;
+    position: fixed;
+    z-index: 1000;
 }
 
-.logo {
-    font-size: 24px;
-}
 
+
+.logo-nav{
+    width: 100px;
+}
 .nav-links {
     list-style: none;
     display: flex;
@@ -33,7 +32,7 @@
 
 .nav-links li a {
     text-decoration: none;
-    color: #fff;
+    color: #000;
 }
 
 /* Estilos del menú de hamburguesa */
