--- a/css/index.css
+++ b/css/index.css
@@ -10,3 +10,9 @@ html,
 body {
     height: 100%;
 }
+
+.container{
+    background-color: white;
+        width: 100%;
+            height: 100%;
+}
