--- a/css/faq.css
+++ b/css/faq.css
@@ -1,9 +1,18 @@
+#faq{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 500px;
+}
+
 .accordion {
   background-color: #5AA0FC;
   color: #fff;
   cursor: pointer;
   padding: 18px;
-  width: 100%;
+  width: 80%;
   border: none;
   text-align: left;
   outline: none;
@@ -31,6 +40,7 @@
   padding: 0 18px;
   background-color: white;
   max-height: 0;
+  width: 80%;
   overflow: hidden;
   transition: max-height 0.2s ease-out;
 }
